--- a/KOscores.html
+++ b/KOscores.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Euro 2024 Predictions and Scores</title>
+    <title>Predictions Table</title>
     <style>
         table {
             width: 100%;
@@ -21,95 +21,125 @@
         th {
             background-color: #f2f2f2;
         }
+
+        .sub-column {
+            background-color: #e0e0e0;
+        }
     </style>
 </head>
 
 <body>
-    <h1>Euro 2024 Predictions and Scores</h1>
-    <table>
+    <table id="predictionsTable">
         <thead>
             <tr>
-                <th>Stage</th>
-                <th>Teams</th>
-                <th>Ali B</th>
-                <th>Amir D</th>
-                <th>Babak J</th>
-                <th>Ehsan T</th>
-                <th>Hootan M</th>
-                <th>Mod J</th>
-                <th>Nima N</th>
-                <th>Ramin R</th>
-                <th>Shahriar N</th>
-                <th>Siamak J</th>
+                <th rowspan="2">Stage</th>
+                <th rowspan="2">Match</th>
             </tr>
+            <tr></tr>
         </thead>
-        <tbody id="predictionTable">
-            <!-- Rows will be added here by JavaScript -->
+        <tbody>
+            <!-- QF Rows -->
+            <tr>
+                <td rowspan="8">QF</td>
+                <td>Match 1</td>
+            </tr>
+            <tr>
+                <td>Match 2</td>
+            </tr>
+            <tr>
+                <td>Match 3</td>
+            </tr>
+            <tr>
+                <td>Match 4</td>
+            </tr>
+            <tr>
+                <td>Match 5</td>
+            </tr>
+            <tr>
+                <td>Match 6</td>
+            </tr>
+            <tr>
+                <td>Match 7</td>
+            </tr>
+            <tr>
+                <td>Match 8</td>
+            </tr>
+            <!-- SF Rows -->
+            <tr>
+                <td rowspan="4">SF</td>
+                <td>Match 1</td>
+            </tr>
+            <tr>
+                <td>Match 2</td>
+            </tr>
+            <tr>
+                <td>Match 3</td>
+            </tr>
+            <tr>
+                <td>Match 4</td>
+            </tr>
+            <!-- F Rows -->
+            <tr>
+                <td rowspan="2">F</td>
+                <td>Match 1</td>
+            </tr>
+            <tr>
+                <td>Match 2</td>
+            </tr>
+            <!-- Champion Row -->
+            <tr>
+                <td colspan="2">Champion</td>
+            </tr>
+            <!-- Golden Boot Row -->
+            <tr>
+                <td colspan="2">Golden Boot</td>
+            </tr>
+            <!-- Top Player Row -->
+            <tr>
+                <td colspan="2">Top Player</td>
+            </tr>
         </tbody>
     </table>
 
     <script>
-        const participants = [
-            { name: "Ali B", scores: "./results_csv/Ali_B_scores.csv" },
-            { name: "Amir D", scores: "./results_csv/Amir_D_scores.csv" },
-            { name: "Babak J", scores: "./results_csv/Babak_J_scores.csv" },
-            { name: "Ehsan T", scores: "./results_csv/Ehsan_T_scores.csv" },
-            { name: "Hootan M", scores: "./results_csv/Hootan_M_scores.csv" },
-            { name: "Mod J", scores: "./results_csv/Mod_J_scores.csv" },
-            { name: "Nima N", scores: "./results_csv/Nima_N_scores.csv" },
-            { name: "Ramin R", scores: "./results_csv/Ramin_R_scores.csv" },
-            { name: "Shahriar N", scores: "./results_csv/Shahriar_N_scores.csv" },
-            { name: "Siamak J", scores: "./results_csv/Siamak_J_scores.csv" }
-        ];
+        document.addEventListener('DOMContentLoaded', function () {
+            fetch('./jsons/participants.json')
+                .then(response => response.json())
+                .then(data => {
+                    const participants = data.participants;
+                    const thead = document.querySelector('#predictionsTable thead tr:first-child');
+                    const subThead = document.querySelector('#predictionsTable thead tr:last-child');
+                    const tbody = document.querySelector('#predictionsTable tbody');
 
-        const stages = [
-            { name: "Quarter-Finals", rows: [52, 53, 54, 55, 56, 57, 58, 59], column: 4, scoreColumn: 6 },
-            { name: "Semi-Finals", rows: [62, 63, 64, 65], column: 4, scoreColumn: 6 },
-            { name: "Final", rows: [68, 69], column: 4, scoreColumn: 6 },
-            { name: "Champion", rows: [72], column: 4, scoreColumn: 6 },
-            { name: "Golden Boot", rows: [75], column: 2, scoreColumn: 6 },
-            { name: "Best Player", rows: [76], column: 2, scoreColumn: 6 }
-        ];
+                    participants.forEach(participant => {
+                        const th = document.createElement('th');
+                        th.colSpan = 2;
+                        th.textContent = participant.name;
+                        thead.appendChild(th);
 
-        async function fetchCSV(file) {
-            const response = await fetch(file);
-            const text = await response.text();
-            const rows = text.split("\n").map(row => row.split(","));
-            return rows;
-        }
+                        const subThTeam = document.createElement('th');
+                        subThTeam.className = 'sub-column';
+                        subThTeam.textContent = 'Team';
+                        subThead.appendChild(subThTeam);
 
-        async function populateTable() {
-            const tableBody = document.getElementById('predictionTable');
+                        const subThScore = document.createElement('th');
+                        subThScore.className = 'sub-column';
+                        subThScore.textContent = 'Score';
+                        subThead.appendChild(subThScore);
+                    });
 
-            for (const stage of stages) {
-                for (const row of stage.rows) {
-                    const rowElement = document.createElement('tr');
-
-                    const stageCell = document.createElement('td');
-                    stageCell.textContent = stage.name;
-                    rowElement.appendChild(stageCell);
-
-                    const teamsCell = document.createElement('td');
-                    rowElement.appendChild(teamsCell);
-
-                    for (const participant of participants) {
-                        const scores = await fetchCSV(participant.scores);
-
-                        if (!teamsCell.textContent) {
-                            teamsCell.textContent = scores[row][stage.column];
+                    const rows = tbody.querySelectorAll('tr');
+                    rows.forEach(row => {
+                        for (let i = 0; i < participants.length; i++) {
+                            const tdTeam = document.createElement('td');
+                            const tdScore = document.createElement('td');
+                            row.appendChild(tdTeam);
+                            row.appendChild(tdScore);
                         }
-
-                        const scoreCell = document.createElement('td');
-                        scoreCell.textContent = scores[row][stage.scoreColumn];
-                        rowElement.appendChild(scoreCell);
-                    }
-
-                    tableBody.appendChild(rowElement);
-                }
-            }
-        }
-
-        populateTable();
+                    });
+                })
+                .catch(error => console.error('Error loading participants:', error));
+        });
     </script>
 </body>
 
